# svr3

./: README.md  main.py  pyproject.toml
static/: style.css
static/js/: main.js
templates/: index.html
