[tool.poetry]
name = "server-info-app"
version = "0.1.0"
description = "Application to display server environment information"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
requests = "^2.31.0"
psutil = "^5.9.5" # Добавлено для получения системной информации
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
